RichwoodNew/src/objects/Saddle__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Saddles</relationshipLabel>
        <relationshipName>Saddles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Belt_Speed__c</fullName>
        <label>Belt Speed</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Belt_Width__c</fullName>
        <label>Belt Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bolt_Centers__c</fullName>
        <label>Bolt Centers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Center_Height__c</fullName>
        <label>Center Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chord_Length__c</fullName>
        <label>Chord Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Asset</label>
        <referenceTo>Customer_Asset__c</referenceTo>
        <relationshipLabel>Saddles</relationshipLabel>
        <relationshipName>Saddles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension_A__c</fullName>
        <label>Dimension A</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension_B__c</fullName>
        <label>Dimension B</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension_C__c</fullName>
        <label>Dimension C</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension_D__c</fullName>
        <label>Dimension D</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension_E__c</fullName>
        <label>Dimension E</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension_F__c</fullName>
        <label>Dimension F</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Height__c</fullName>
        <label>Drop Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Idler__c</fullName>
        <label>Idler</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idler_in_Load_Zone__c</fullName>
        <label>Idler in Load Zone?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAX_Lump_Size__c</fullName>
        <label>MAX Lump Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAX_Lump_Weight__c</fullName>
        <label>MAX Lump Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material_Density__c</fullName>
        <label>Material Density</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Saddles</relationshipLabel>
        <relationshipName>Saddles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saddle__c</fullName>
        <label>Saddle</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tons_per_Hour__c</fullName>
        <label>Tons per Hour</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trough_Angle__c</fullName>
        <label>Trough Angle</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Metric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wing_Height__c</fullName>
        <label>Wing Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Saddle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Asset__c</columns>
        <columns>Belt_Width__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Saddle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Saddles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>